--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,13 @@
             "email": "alfred@encodevlabs.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+			"classmap": [
+					"src/mpower"
+			],
+			"files":[
+				"src/mpower.php"
+			]
+		},
 }
